--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="css/style.min.css">
-  <script defer src="js/app.min.js"></script>
+  <script defer src="js/vendors.min.js"></script>
+  <script defer src="js/main.min.js"></script>
   <title></title>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="app" id="app"></div>
+  <div class="wrapper" id="app">
   </div>
 </body>
 </html>
